# platformx

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HONEST_VERIFICATION.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  UPDATE_SUMMARY.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docs.yml
docs/: api.md  configuration.md  getting_started.md  index.md  installation.md  strategy.md
docs/modules/: config.md  core.md  data.md  model_finetune.md  safety.md  training_raft.md
examples/: 01_basic_indexing.py  02_rag_pipeline.py  03_raft_generation.py  04_safety_filtering.py  05_quick_start.py  README.md
src/platformx/: __init__.py  api.py  cli.py  config.py  core.py
src/platformx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/platformx/audit/: __init__.py  logger.py
src/platformx/data/: __init__.py  loader.py  registry.py  schema.py
src/platformx/model/: __init__.py  adapters.py  backend.py  finetune.py  inference.py
src/platformx/retrieval/: __init__.py  embeddings.py  engine.py  indexer.py  query.py
src/platformx/safety/: __init__.py  confidence.py  filters.py  refusal.py
src/platformx/training/: __init__.py  datasets.py  raft.py
tests/: __init__.py  conftest.py  test_api.py  test_audit.py  test_audit_logger.py  test_config.py  test_core.py  test_data_loader.py  test_data_registry.py  test_data_schema.py  test_model_finetune.py  test_retrieval.py  test_safety.py  test_training.py
